--- a/docs/문제풀이/18796 이동하기 4.md
+++ b/docs/문제풀이/18796 이동하기 4.md
@@ -1,4 +1,5 @@
-# 파트 1: 문제의 재구성
+# 18796 이동하기 4
+## 파트 1: 문제의 재구성
 
 (TODO)
 
@@ -7,7 +8,7 @@
 - 몇 개의 칸을 색칠할 건데, 색칠한 칸은 높이가 단조감소하는 히스토그램을 이루어야 합니다.
 - 비용을 최소화하세요.
 
-# 파트 2: 그리디 접근
+## 파트 2: 그리디 접근
 우선 첫 번째 열부터 봅시다. 최적해에서 첫 번째 열의 높이가 $i$라고 합시다. 즉 $(1, 1), (2, 1), \cdots, (i, 1)$을 칠한 상태입니다.
 
 만약 $(i, 1)$의 비용이 0 이하라면, $i-1$층까지만 먹고 $i$층을 안 먹을 이유가 없습니다. 하지만 $(i, 1)$의 비용이 양수라면 $i-1$층까지만 먹을 이유가 있습니다. 그럼에도 $i$층을 먹는 게 이득이 되려면, 두 번째 열도 $i$층까지 먹어야 합니다. 두 번째 열이 $i$층을 안 먹었다면 첫 번째 열에서 $i$층을 빼버릴 수 있습니다.
@@ -22,13 +23,13 @@
 
 반대로 말하면, **$R[i] \geq R[i+1]$이면 $i$층에서 멈출 일이 없습니다**.
 
-# 파트 3: 그러므로 i층을 지웁시다
+## 파트 3: 그러므로 i층을 지웁시다
 TODO
 
-# 파트 4: 합체
+## 파트 4: 합체
 TODO
 
-# 파트 5: 분해
+## 파트 5: 분해
 이제 아주 중요한 일이 일어납니다. 수열 $R$을 블록으로 합친 결과를 $Blocks(R)$이라고 합시다.
 
 블록 $(S, h)$가 $l$번째부터 $r$번째까지 행에 해당된다면, $R[l], \cdots, R[r]$을 전부 $\frac{S}{h}$로 바꿔도 $Blocks(R)$은 바뀌지 않습니다. 이 과정을 "분해"라고 합시다. ($\frac{S}{h}$가 정수가 아닐 수도 있지만, 일단은 신경쓰지 맙시다.) 또한 $Blocks(R_1) = Blocks(R_2)$라면, 수열 $R$이 $R_1$이든 $R_2$든 문제의 답은 바뀌지 않습니다.
@@ -37,7 +38,7 @@ TODO
 
 $C$도 같은 방법으로 단조증가하는 수열 $C'$로 바꿔 줍니다. 이제 원래 문제에서 "$R$과 $C$는 단조증가한다"라는 조건이 붙은 새로운 문제를 풀면 됩니다.
 
-# 파트 6: 새로운 문제
+## 파트 6: 새로운 문제
 이 새로운 문제를 풀어 봅시다. 칠하는 비용이 0 이하인 칸만 다 모아보면 높이가 단조감소하는 히스토그램이 됩니다. 왜냐? 어떤 칸의 비용이 양수라면, 그 칸의 윗쪽이나 오른쪽 칸도 비용이 양수이기 때문입니다. 따라서 그냥 모든 칸의 비용 중 0 이하인 것만 다 더하면 됩니다.
 
 각 $i$마다, $R[i] + C[j] \leq 0$인 최대의 $j$를 이분탐색으로 찾고 $(R[i] + C[1]) + \cdots + (R[i] + C[j])$를 구합니다. 이는 $j \cdot R[i] + (C[1] + \cdots + C[j])$이므로 $C$의 [[Prefix sum]]을 저장해 두면 됩니다.
