--- a/docs/문제풀이/20672 대세는 바이러스야.md
+++ b/docs/문제풀이/20672 대세는 바이러스야.md
@@ -1,4 +1,6 @@
 # 20672 대세는 바이러스야
+[[20672 대세는 바이러스야.pdf|pdf로 보기]]
+
 # 연속된 일부분이란?
 트리의 루트를 1로 잡습니다. 풀이에서는 몬스터의 유전자 $g[i]$를 대신 $dna[i]$라고 표기하겠습니다.
 
@@ -17,7 +19,7 @@
 출발지 $v$에 대해, 모든 $g$에 대한 $g(dpY[v][g] + dpN[v][g])$의 합을 구하면 우리가 원하는 치트키 합을 얻습니다.
 
 # 공간 복잡도가 너무 크지 않아요?
-언뜻 보면 공간 복잡도가 $O(N^2)$인 것 같지만, 사실 가능한 치트키는 그 만큼 많지 않습니다. 치트키는 $dna[1]$의 약수이기 때문입니다. $10^9$ 이하의 자연수 중 약수가 가장 많은 수는 735,134,400으로, 약수가 1,344개입니다. (이런 수를 [[Highly composite number]]라고 부릅니다.) 따라서 $dpY$, $dpN$을 map으로 바꿔 공간 복잡도를 줄일 수 있습니다. 다만 아직 map으로 바꾸지는 맙시다.
+언뜻 보면 공간 복잡도가 $O(N^2)$인 것 같지만, 사실 가능한 치트키는 그 만큼 많지 않습니다. 치트키는 $dna[1]$의 약수이기 때문입니다. $10^9$ 이하의 자연수 중 약수가 가장 많은 수는 735,134,400으로, 약수가 1,344개입니다. (이런 수를 highly composite number라고 부릅니다.) 따라서 $dpY$, $dpN$을 map으로 바꿔 공간 복잡도를 줄일 수 있습니다. 다만 아직 map으로 바꾸지는 맙시다.
 
 이제부터 $D$를 약수의 최대 개수인 1,344로 둡시다.
 
@@ -39,7 +41,7 @@ $X, Y, Z$를 구해 봅시다.
 
 # 최적화
 거의 다 왔습니다! 이제 자잘한 최적화를 거치면 끝납니다.
-* $dpY$를 map이나 unordered_map으로 바꾸면 공간 복잡도가 $O(N \log(dna[1]))$로 줄어듭니다. [[Prefix gcd]]를 참조하세요.
+* $dpY$를 map이나 unordered_map으로 바꾸면 공간 복잡도가 $O(N \log(dna[1]))$로 줄어듭니다. 배열에서 첫 $i$개의 수의 gcd로 가능한 값은 $O(\log N)$개이기 때문입니다.
 * 사실 $dpN$에서는 $g$가 전혀 중요하지 않습니다. $dpN[v]$를 "모든 g에 대해 $g\cdots dpN[v][g]$의 합"으로 두면 공간 복잡도가 $O(N)$으로 줄어듭니다.
 * gcd를 $O(ND)$번이나 구하고 싶지는 않습니다. 상수 시간으로 줄여봅시다. 우선, 각각의 $dna[i]$를 $gcd(dna[1], dna[i])$로 바꿔도 답이 변하지 않습니다. 그리고 그렇게 하면 서로 다른 $dna$값이 최대 $D$개이므로, 서로 다른 gcd 연산은 $O(D^2)$개입니다. 이걸 모두 전처리합니다. 마지막으로, 모든 dna값을 좌표압축하듯이 1 이상 $D$ 이하로 바꾸면, gcd 계산은 배열 값 받아오기로 대체됩니다.
 
