add algorithm posts

--- a/docs/알고리즘.md
+++ b/docs/알고리즘.md
@@ -1,2 +1,38 @@
-[[Persistent Data Structures]]
+# 자료구조 및 알고리즘 튜토리얼
+각 항목에는 다음과 같이 이모지를 붙여 놓았습니다.
+
+- 🔢 수학
+- ♻️ 쿼리 및 자료구조
+- ⚡ DP
+- 🧭 기하
+- 🧵 문자열
+- 🗺️ 그래프
+- 📪 기타
+
+## Silver
+
+## Gold
+- ♻️ [[스킵 리스트]] by jh05013
+
+## Platinum
+- 🔢 [중국인의 나머지 정리](https://rkm0959.tistory.com/180?category=828364) by rkm0959
+- ♻️ [펜윅 트리 200% 활용하기](https://www.acmicpc.net/blog/view/88) by jh05013
+- ♻️ [Mo's algorithm](http://www.secmem.org/blog/2019/02/09/mo%27s-algorithm/) by djm03178
+- ♻️ [Persistent data structures](https://www.secmem.org/blog/2021/09/04/persistent/) by jh05013
+
+## Diamond
+- ⚡ [Slope trick](https://jwvg0425.github.io/ps_slope_trick) by jwvg0425
+- ⚡ [[Connection profile DP]] by jh05013
+- 🗺️ [[HLD 하나로 경로 쿼리와 서브트리 쿼리 모두 지원하기]] by jh05013
+- ⚡ [Aliens 트릭](https://koosaga.com/243) by koosaga
+- 🧵 [회문 트리](https://koosaga.com/249) by koosaga
+- 🔢 [벌레캠프-매시 알고리즘](https://koosaga.com/231) by koosaga
+- ⚡ [Hirshberg](https://koosaga.com/243) by koosaga
+- 🗺️ [일반 매칭](https://koosaga.com/258) by koosaga
+- ♻️ [링크/컷 트리](https://imeimi.tistory.com/27?category=256657) by imeimi
+
+## Ruby
+- 🧵 접미사 트리 [part 1](https://www.secmem.org/blog/2021/02/20/suffix-tree/) [part 2](https://www.secmem.org/blog/2021/04/11/suffix-tree-2/) by jh05013
+- 🗺️ [현 그래프(Chordal graph)](https://www.secmem.org/blog/2019/03/10/Finding-perfect-elimination-ordering-in-choral-graphs/) by ainta
+- ♻️ [탑 트리](http://www.secmem.org/blog/2021/03/21/toptree/) by koosaga
 
