--- a/docs/문제풀이/18796 이동하기 4.md
+++ b/docs/문제풀이/18796 이동하기 4.md
@@ -1,4 +1,8 @@
 # 18796 이동하기 4
+https://acmicpc.net/problem/18796
+
+[[18796 이동하기 4.pdf|pdf로 보기]]
+
 ```
 60  +---+---+---+       +60-+60-+60-+
     |   |   |   |       10  90  80  70
