--- a/docs/문제풀이/BOJ 20672 대세는 바이러스야.md
+++ b/docs/문제풀이/BOJ 20672 대세는 바이러스야.md
@@ -48,3 +48,8 @@ $X, Y, Z$를 구해 봅시다.
 * gcd를 $O(ND)$번이나 구하고 싶지는 않습니다. 상수 시간으로 줄여봅시다. 우선, 각각의 $dna[i]$를 $gcd(dna[1], dna[i])$로 바꿔도 답이 변하지 않습니다. 그리고 그렇게 하면 서로 다른 $dna$값이 최대 $D$개이므로, 서로 다른 gcd 연산은 $O(D^2)$개입니다. 이걸 모두 전처리합니다. 마지막으로, 모든 dna값을 좌표압축하듯이 1 이상 $D$ 이하로 바꾸면, gcd 계산은 배열 값 받아오기로 대체됩니다.
 
 이 모든 과정을 거치면 $O((N+D^2)\log(dna))$에 문제가 풀립니다.
+
+# 별해
+공식 풀이는 다음 링크에서 볼 수 있습니다.
+
+[https://www.slideshare.net/MinGyuKim6/2020-shake-solution](https://www.slideshare.net/MinGyuKim6/2020-shake-solution)
