add shape union

--- a/docs/알고리즘.md
+++ b/docs/알고리즘.md
@@ -34,6 +34,7 @@
 - ♻️ [[HLD 하나로 경로 쿼리와 서브트리 쿼리 모두 지원하기]] by jh05013
 - ⚡ [Slope trick](https://jwvg0425.github.io/ps_slope_trick) by jwvg0425
 - 🧵 [회문 트리](https://koosaga.com/249) by koosaga
+- 🧭 [[도형의 합집합과 넓이]] by jh05013
 
 ## Diamond Hard
 - 🧮 [벌레캠프-매시 알고리즘](https://koosaga.com/231) by koosaga
