--- a/docs/알고리즘.md
+++ b/docs/알고리즘.md
@@ -32,6 +32,7 @@
 - 🧮 [Number-theoretic transform](https://algoshitpo.github.io/2020/05/20/fft-ntt/) by jhnah917
 - 🧮 [보스탄-모리 알고리즘](https://www.secmem.org/blog/2021/12/21/Bostan-Mori_Algorithm/) by aeren
 - ♻️ [[HLD 하나로 경로 쿼리와 서브트리 쿼리 모두 지원하기]] by jh05013
+- 🗺️ [[삼각형 찾기]] by jh05013
 - ⚡ [Slope trick](https://jwvg0425.github.io/ps_slope_trick) by jwvg0425
 - 🧵 [회문 트리](https://koosaga.com/249) by koosaga
 - 🧭 [[도형의 합집합과 넓이]] by jh05013
