--- a/docs/알고리즘/삼각형 찾기.md
+++ b/docs/알고리즘/삼각형 찾기.md
@@ -1,4 +1,6 @@
 # 삼각형 찾기
+[[삼각형 찾기.pdf|pdf로 보기]]
+
 단순 그래프의 정점의 개수를 $n$, 간선의 개수를 $m$이라고 합시다. 이 그래프에 있는 삼각형, 즉 길이 3의 사이클을 모두 찾을 수 있을까요?
 
 # $O(\frac{nm}{w})$
